// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Dark mode snapshot tests > CalloutBlock info variant matches dark mode snapshot 1`] = `
<div>
  <aside
    class="callout callout--info"
    role="note"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-info callout-icon"
      fill="none"
      height="20"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <path
        d="M12 16v-4"
      />
      <path
        d="M12 8h.01"
      />
    </svg>
    <div
      class="callout-body"
    >
      <span>
        This is an 
        <strong>
          info
        </strong>
         callout with 
        <code
          class="callout-inline-code"
        >
          code
        </code>
        .
      </span>
    </div>
  </aside>
</div>
`;

exports[`Dark mode snapshot tests > CalloutBlock tip variant matches dark mode snapshot 1`] = `
<div>
  <aside
    class="callout callout--tip"
    role="note"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-lightbulb callout-icon"
      fill="none"
      height="20"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15 14c.2-1 .7-1.7 1.5-2.5 1-.9 1.5-2.2 1.5-3.5A6 6 0 0 0 6 8c0 1 .2 2.2 1.5 3.5.7.7 1.3 1.5 1.5 2.5"
      />
      <path
        d="M9 18h6"
      />
      <path
        d="M10 22h4"
      />
    </svg>
    <div
      class="callout-body"
    >
      <span>
        This is a 
        <strong>
          tip
        </strong>
         callout.
      </span>
    </div>
  </aside>
</div>
`;

exports[`Dark mode snapshot tests > CalloutBlock warning variant matches dark mode snapshot 1`] = `
<div>
  <aside
    class="callout callout--warning"
    role="note"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-triangle-alert callout-icon"
      fill="none"
      height="20"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
      />
      <path
        d="M12 9v4"
      />
      <path
        d="M12 17h.01"
      />
    </svg>
    <div
      class="callout-body"
    >
      <span>
        This is a 
        <strong>
          warning
        </strong>
         callout.
      </span>
    </div>
  </aside>
</div>
`;

exports[`Dark mode snapshot tests > CodeBlock matches dark mode snapshot 1`] = `
<div>
  <div
    class="code-block"
  >
    <div
      class="code-block-header"
    >
      <button
        aria-label="Copy code"
        class="code-block-copy"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-copy"
          fill="none"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="14"
            rx="2"
            ry="2"
            width="14"
            x="8"
            y="8"
          />
          <path
            d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
          />
        </svg>
      </button>
    </div>
    <pre
      class="code-block-fallback"
    >
      <code
        data-language="javascript"
      >
        const x = 1
      </code>
    </pre>
  </div>
</div>
`;

exports[`Dark mode snapshot tests > EmptyState matches dark mode snapshot 1`] = `
<div>
  <div
    style="display: flex; flex-direction: column; align-items: center; justify-content: center; padding: var(--space-10) var(--space-8); gap: var(--space-3); color: var(--color-text-muted); font-family: var(--font-sans); text-align: center;"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-book-open"
      fill="none"
      height="32"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
      viewBox="0 0 24 24"
      width="32"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 7v14"
      />
      <path
        d="M3 18a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h5a4 4 0 0 1 4 4 4 4 0 0 1 4-4h5a1 1 0 0 1 1 1v13a1 1 0 0 1-1 1h-6a3 3 0 0 0-3 3 3 3 0 0 0-3-3z"
      />
    </svg>
    <h2
      style="margin: 0px; font-size: var(--text-base); font-weight: 600; color: var(--color-text-secondary);"
    >
      No topics
    </h2>
    <p
      style="margin: 0px; font-size: var(--text-sm); line-height: var(--leading-sm);"
    >
      No topics found.
    </p>
  </div>
</div>
`;

exports[`Dark mode snapshot tests > ErrorState matches dark mode snapshot 1`] = `
<div>
  <div
    role="alert"
    style="margin-top: var(--space-4); padding: var(--space-4); background: var(--color-warning-subtle); border: 1px solid var(--color-warning); border-radius: var(--radius-sm); font-family: var(--font-sans);"
  >
    <div
      style="display: flex; align-items: center; gap: var(--space-2);"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-triangle-alert"
        fill="none"
        height="16"
        stroke="var(--color-warning)"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
        />
        <path
          d="M12 9v4"
        />
        <path
          d="M12 17h.01"
        />
      </svg>
      <h3
        style="margin: 0px; font-size: var(--text-sm); font-weight: 600; color: var(--color-text-primary);"
      >
        Couldn't load course
      </h3>
    </div>
    <p
      style="margin: var(--space-2) 0 0; font-size: var(--text-sm); color: var(--color-text-secondary); line-height: var(--leading-sm);"
    >
      Something went wrong
    </p>
    <div
      style="display: flex; align-items: center; gap: var(--space-3); margin-top: var(--space-3);"
    >
      <button
        style="background: none; border: 1px solid var(--color-border); border-radius: var(--radius-sm); padding: var(--space-1) var(--space-3); font-size: var(--text-sm); font-weight: 500; color: var(--color-text-primary); cursor: default; font-family: var(--font-sans);"
        type="button"
      >
        Try again
      </button>
      <button
        aria-label="Dismiss error"
        style="background: none; border: medium; padding: var(--space-1) var(--space-2); font-size: var(--text-sm); color: var(--color-text-muted); cursor: default; font-family: var(--font-sans);"
        type="button"
      >
        Dismiss
      </button>
    </div>
  </div>
</div>
`;

exports[`Dark mode snapshot tests > Home screen matches dark mode snapshot 1`] = `
<div>
  <div
    style="display: flex; flex-direction: column; align-items: center; justify-content: center; min-height: 100vh; padding: var(--space-16) var(--space-6); font-family: var(--font-sans);"
  >
    <h1
      style="font-size: var(--text-2xl); font-weight: 700; line-height: var(--leading-2xl); margin: 0px; color: var(--color-text-primary);"
    >
      Course Imports
    </h1>
    <p
      style="font-size: var(--text-base); line-height: var(--leading-base); color: var(--color-text-secondary); margin: var(--space-2) 0 var(--space-10);"
    >
      Load a course to get started
    </p>
    <div
      style="width: 100%; max-width: 420px;"
    >
      <label
        for="github-url"
        style="display: block; font-size: var(--text-sm); font-weight: 500; color: var(--color-text-secondary); margin-bottom: var(--space-2);"
      >
        Load from GitHub
      </label>
      <div
        style="display: flex; gap: var(--space-2);"
      >
        <input
          id="github-url"
          placeholder="https://github.com/owner/repo"
          style="flex: 1 1 0%; background: var(--color-bg); border: 1px solid var(--color-border); border-radius: var(--radius-sm); padding: var(--space-2) var(--space-3); font-size: var(--text-base); color: var(--color-text-primary); font-family: var(--font-sans); outline: none;"
          type="text"
          value=""
        />
        <button
          style="background: var(--color-accent); color: rgb(255, 255, 255); border: medium; border-radius: var(--radius-sm); padding: var(--space-2) var(--space-4); font-size: var(--text-base); font-weight: 500; cursor: default; font-family: var(--font-sans); white-space: nowrap;"
          type="button"
        >
          Load course
        </button>
      </div>
      <div
        style="display: flex; align-items: center; gap: var(--space-4); margin: var(--space-8) 0; color: var(--color-text-muted); font-size: var(--text-sm);"
      >
        <span
          style="flex: 1 1 0%; height: 1px; background: var(--color-border);"
        />
        <span>
          or
        </span>
        <span
          style="flex: 1 1 0%; height: 1px; background: var(--color-border);"
        />
      </div>
      <button
        style="width: 100%; background: transparent; border: 1px solid var(--color-border); border-radius: var(--radius-sm); padding: var(--space-2) var(--space-4); font-size: var(--text-base); font-weight: 500; color: var(--color-text-primary); cursor: default; font-family: var(--font-sans);"
        type="button"
      >
        Open local folder
      </button>
    </div>
    <div
      style="margin-top: var(--space-10); width: 100%; max-width: 420px;"
    >
      <h2
        style="font-size: var(--text-sm); font-weight: 500; color: var(--color-text-secondary); margin: 0 0 var(--space-3);"
      >
        Recent courses
      </h2>
      <div
        style="display: flex; flex-direction: column; align-items: center; gap: var(--space-2); padding: var(--space-6) var(--space-4); color: var(--color-text-muted); text-align: center;"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-inbox"
          fill="none"
          height="32"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="22 12 16 12 14 15 10 15 8 12 2 12"
          />
          <path
            d="M5.45 5.11 2 12v6a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-6l-3.45-6.89A2 2 0 0 0 16.76 4H7.24a2 2 0 0 0-1.79 1.11z"
          />
        </svg>
        <h3
          style="margin: 0px; font-size: var(--text-sm); font-weight: 600; color: var(--color-text-secondary);"
        >
          No courses yet
        </h3>
        <p
          style="margin: 0px; font-size: var(--text-sm); line-height: var(--leading-sm); color: var(--color-text-muted);"
        >
          Load a course from GitHub or open a local folder to get started.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dark mode snapshot tests > ImageBlock with fallback matches dark mode snapshot 1`] = `
<div>
  <figure
    class="image-block"
  >
    <div
      aria-label="Test image"
      class="image-block-fallback"
      role="img"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-image-off"
        fill="none"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <line
          x1="2"
          x2="22"
          y1="2"
          y2="22"
        />
        <path
          d="M10.41 10.41a2 2 0 1 1-2.83-2.83"
        />
        <line
          x1="13.5"
          x2="6"
          y1="13.5"
          y2="21"
        />
        <line
          x1="18"
          x2="21"
          y1="12"
          y2="15"
        />
        <path
          d="M3.59 3.59A1.99 1.99 0 0 0 3 5v14a2 2 0 0 0 2 2h14c.55 0 1.052-.22 1.41-.59"
        />
        <path
          d="M21 15V5a2 2 0 0 0-2-2H9"
        />
      </svg>
      <span>
        Test image
      </span>
    </div>
  </figure>
</div>
`;

exports[`Dark mode snapshot tests > QuizBlock matches dark mode snapshot 1`] = `
<div>
  <div
    class="quiz-block"
  >
    <p
      class="quiz-block-question"
    >
      What is 2+2?
    </p>
    <div
      aria-label="Answer options"
      class="quiz-block-options"
      role="radiogroup"
    >
      <button
        aria-checked="false"
        class="quiz-block-option"
        role="radio"
      >
        3
      </button>
      <button
        aria-checked="false"
        class="quiz-block-option"
        role="radio"
      >
        4
      </button>
      <button
        aria-checked="false"
        class="quiz-block-option"
        role="radio"
      >
        5
      </button>
    </div>
    <div
      aria-live="polite"
    />
  </div>
</div>
`;

exports[`Dark mode snapshot tests > TextBlock with markdown matches dark mode snapshot 1`] = `
<div>
  <div
    class="text-block"
  >
    <h1>
      Heading
    </h1>
    

    <p>
      Body text paragraph.
    </p>
    

    <ul>
      

      <li>
        List item
      </li>
      

    </ul>
    

    <p>
      <code
        class="inline-code"
      >
        inline code
      </code>
    </p>
  </div>
</div>
`;
